Fix: z-index of modal reseted during animation

--- a/src/components/Modal.scss
+++ b/src/components/Modal.scss
@@ -1,6 +1,7 @@
 @use '../Variables.scss' as v;
 
 .modal {
+	position: relative;
 	z-index: 30;
 	&__overlay {
 		position: fixed;
@@ -43,10 +44,10 @@
 		width: 95vw;
 	}
 	&--in {
-		animation: modalIn ease-out 0.3s;
+		animation: modalIn ease-out 0.3s forwards;
 	}
 	&--out {
-		animation: modalOut ease-in 0.2s;
+		animation: modalOut ease-in 0.2s forwards;
 	}
 }
 
